--- a/team4style.css
+++ b/team4style.css
@@ -2,7 +2,10 @@
   <h1>Team 4</h1>
   <p> Team members:Divya Addala, Apoorva Bathula, Nithya Rao, Pradhi Waghray, SriShreya Sriharir</p>
 </div>
-
+.header {
+  background-color: #F1F1F1;
+  text-align: center;
+  padding: 20px;
   background-color: lightpink;
 }
 
