--- a/team4style.css
+++ b/team4style.css
@@ -1,14 +1,48 @@
-<div class="Team 4">
-  <h1>Header</h1>
-  <p> Team members: Divya Addala, Apoorva Bathula, Nithya Rao, Pradhi Waghray, SriShreya Sriharir</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Team 4</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Style the body */
+body {
+  font-family: Arial;
+  margin: 0;
+}
+
+/* Header/Logo Title */
+.header {
+  padding: 60px;
   text-align: center;
-  padding: 20px;
-background-color: #lightpink;
+  background: black;
+  color: lightpink;
+  font-size: 30px;
+}
+
+/* Page Content */
+.content {padding:20px;}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>Team 4</h1>
+  <p>Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray</p>
+</div>
+
+<div class="content">
+  <h1>Menu</h1>
+  <p>Team Page (2)</p>
+  <p>Divya Addala: Webmaster (3) </p>
+  <p>Pradhi Waghray: Content Specialist (4).</p>
+  <p>Nithya Rao:  Front-end and Back-end developer (5) <p>
+  <p>Srishreya: Tech Support and QA Specialist (6)<p>
+  <p>Apoorva: Site Architect (7)<p>
 
   
+</div>
 
-h1 {
-  color: navy;
-  margin-left: 20px;
+</body>
+</html>
 }
