--- a/team4style.css
+++ b/team4style.css
@@ -11,3 +11,15 @@ body {
   margin: 0;
 }
 
+/* Header/Logo Title */
+.header {
+  padding: 60px;
+  text-align: center;
+  background: black;
+  color: light pink;
+  font-size: 30px;
+}
+
+</body>
+</html>
+}
