--- a/team4style.css
+++ b/team4style.css
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Team 4</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+< !DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
+
 /* Style the body */
 body {
   font-family: Arial;
@@ -16,10 +11,11 @@ body {
   padding: 60px;
   text-align: center;
   background: black;
-  color: light pink;
+  color: lightpink;
   font-size: 30px;
 }
 
-</body>
-</html>
+/* Page Content */
+.content {
+  padding: 20px;
 }
