--- a/team4style.css
+++ b/team4style.css
@@ -10,8 +10,8 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-  background: black;
-  color: lightpink;
+  background: lightpink;
+  color: black;
   font-size: 30px;
 }
 
