--- a/team4style.css
+++ b/team4style.css
@@ -10,7 +10,7 @@ body {
 .header {
   padding: 60px;
   text-align: center;
- background: black;
+ background: purple;
   color: lightpink;
   font-size: 30px;
 }
