--- a/team4style.css
+++ b/team4style.css
@@ -10,8 +10,8 @@ body {
 .header {
   padding: 60px;
   text-align: center;
- background: purple;
-  color: lightpink;
+ background: lightpink;
+  color: white;
   font-size: 30px;
 }
 
