--- a/team4style.css
+++ b/team4style.css
@@ -18,6 +18,7 @@ background: navy;
 /* Page Content */
 .content {
   padding: 20px;
-background: rgb(255, 182, 238);
+ background: rgb(255, 182, 238);
+}
 }
 
