--- a/team4style.css
+++ b/team4style.css
@@ -10,15 +10,16 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-background: navy;
-  color: rgb(255, 182, 238);
+ background: rgb(248, 200, 208);
+  color: black
   font-size: 30px;
 }
 
 /* Page Content */
 .content {
   padding: 20px;
-background: rgb(255, 208, 244);
+  background: rgb(255, 208, 244);
+}
 }
 }
 
