--- a/team4style.css
+++ b/team4style.css
@@ -13,7 +13,12 @@ body {
  background: rgb(248, 200, 208);
   color: black
   font-size: 30px;
-}
+div2 {
+  width: 300px;
+  height: 100px;  
+  padding: 50px;
+  border: 1px solid red;
+  box-sizing: border-box;
 
 /* Page Content */
 .content {
