--- a/team4style.css
+++ b/team4style.css
@@ -24,6 +24,17 @@ div2 {
 .content {
   padding: 20px;
   background: rgb(255, 208, 244);
+  <div class="content">
+   .div2 {
+                          width: 300px;
+                          height: 100px;  
+                          padding: 50px;
+                          border: 1px solid black
+                          box-sizing: border-box;
+                        }
+                        </style>
+                        </head>
+                        <body>
 }
 }
 }
