--- a/team4style.css
+++ b/team4style.css
@@ -1,24 +1,21 @@
-< !DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
-
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
+<!DOCTYPE html>
+<html>
+<head>
+<style> 
+.div1 {
+  width: 300px;
+  height: 100px;
+  border: 1px solid blue;
+  box-sizing: border-box;
 }
 
-/* Header/Logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
- background: rgb(248, 200, 208);
-  color: black
-  font-size: 30px;
+.div2 {
+  width: 300px;
+  height: 100px;  
+  padding: 50px;
+  border: 1px solid red;
+  box-sizing: border-box;
 }
-
-/* Page Content */
-.content {
-  padding: 20px;
-  background: rgb(255, 208, 244);
-}
-}
-}
+</style>
+</head>
+<body>
