--- a/team4style.css
+++ b/team4style.css
@@ -10,7 +10,7 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-background: rgb(248, 200, 208);
+background: RGB(248, 200, 208);
   color: black
   font-size: 30px;
 }
