--- a/team4style.css
+++ b/team4style.css
@@ -14,18 +14,14 @@ body {
   color: black
   font-size: 50px;
 }
-/* Page Content */
-content {
-  padding: 20px;
-  margin-left auto;
-  margin-right auto;
-  background:  solid rgb(238, 155, 169);
-  
-.div2 
+
+.div2 {
   width: 350px;
   height: 150px;  
   padding: 85px;
   border: 1px solid rgb(0, 0, 0);
-  box-sizing: border-box; }
-
-.
+  box-sizing: border-box;
+}/* Page Content */
+.content {
+  padding: 20px;
+  background:  solid rgb(238, 155, 169);
