--- a/team4style.css
+++ b/team4style.css
@@ -23,7 +23,7 @@ content {
   background:  solid rgb(238, 155, 169);}
 
 .div2 {
-  margin: 20px;
+  margin-right: 50px;
   display: grid;
   justify-items: center;
 
