--- a/team4style.css
+++ b/team4style.css
@@ -24,11 +24,17 @@ content {
 
 .div2 {
   margin-right: 50px;
-  display: grid;
-  justify-items: center;
-
   width: 350px;
   height: 150px;  
   padding: 85px;
   border: 1px solid rgb(0, 0, 0);
-  box-sizing: border-box; }
+  box-sizing: border-box; 
+}
+.container {
+  max-width: 500px;
+  margin:auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
