--- a/team4style.css
+++ b/team4style.css
@@ -1,4 +1,4 @@
-< !DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
+<!DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
 
 /* Style the body */
 body {
@@ -35,6 +35,11 @@ content {
   max-width: 500px;
   margin:auto;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  {
+  justify-content: center;
+}
   flex-direction: row;
   flex-wrap: wrap;
   {
