--- a/team4style.css
+++ b/team4style.css
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
+< !DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
+
+/* Style the body */
 body {
-  background-color: lightblue;
+  font-family: Arial;
+  margin: 0;
 }
 
-h1 {
-  color: white;
-  text-align: center;
-}
-
-p {
-  font-family: verdana;
-  font-size: 35px;
-}
-</style>
-</head>
-<body>
-
-<h1>Team 4</h1>
-<p>Team members:Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray.</p>
-
-</body>
-</html>
-  
+/* Header/Logo Title */
+.header {
   padding: 60px;
   text-align: center;
   background: RGB(248, 200, 208);
@@ -43,11 +26,4 @@ p {
   padding: 20px;
   background: RGB(255, 208, 244);
 }
-}
-  margin:auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  {
-  justify-content: center;
 }
