--- a/team4style.css
+++ b/team4style.css
@@ -1,68 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-#customers {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+< !DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
+
+
+/* Header/Logo Title */
+.header {
+  padding: 60px;
+  text-align: center;
+  background: RGB(248, 200, 208);
+  color: black
+  font-size: 30px;
 }
 
-#customers td, #customers th {
-  border: 1px solid #ddd;
-  padding: 8px;
+.div2 {
+  width: 300px;
+  height: 100px;  
+  padding: 50px;
+  border: 1px solid red;
+  box-sizing: border-box;
+}/* Page Content */
+.content {
+  padding: 20px;
+  background: RGB(255, 208, 244);
 }
-
-#customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd;}
-
-#customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #04AA6D;
-  color: white;
 }
-</style>
-</head>
-<body>
-
-<h1>Menu </h1>
-
-<table id="customers">
-  <tr>
-    <th>pages</th>
-    <th>page number</th>
-    
-  </tr>
-  <tr>
-    <td>Our Team </td>
-    <td>page 2</td>
-    
-  </tr>
-  <tr>
-    <td>Divya Addala: Webmaster</td>
-    <td>page 3</td>
-    
-  </tr>
-  <tr>
-    <td>Pradhi Waghray: Content Specialist </td>
-    <td>page 4</td>
-   
-  </tr>
-  <tr>
-    <td>Nithya Rao: Front-end and Back-end developer </td>
-    <td>page 5</td>
-   
-  </tr>
-  <tr>
-    <td>Srishreya: Tech Support and QA Specialist</td>
-    <td>page 6</td>
-    
-  </tr>
-  <tr>
-    <td>Apoorva: Site Architect (7)</td>
-    <td>page 7</td>
-  
-  <
+  margin:auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  {
+  justify-content: center;
+}
