--- a/team4style.css
+++ b/team4style.css
@@ -1,31 +1,27 @@
-< !DOCTYPE html><html lang="en"><head><title>Team 4 from css</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>CSS Website Layout</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+}
 
-
-/* Header/Logo Title */
+/* Style the header */
 .header {
-  padding: 60px;
-  text-align: center;
-  background: RGB(248, 200, 208);
-  color: black
-  font-size: 30px;
-}
-
-.div2 {
-  width: 300px;
-  height: 100px;  
-  padding: 50px;
-  border: 1px solid red;
-  box-sizing: border-box;
-}/* Page Content */
-.content {
+  background-color: rgb(249, 201, 208);
   padding: 20px;
-  background: RGB(255, 208, 244);
+  text-align: center;
 }
-}
-  margin:auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  {
-  justify-content: center;
-}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>Team 4</h1>
+</div>
+
+</body>
+</html>
