--- a/team4style.css
+++ b/team4style.css
@@ -25,51 +25,84 @@ body {
 
 </body>
 </html>
+
+table, td, th {
+    border: 1px solid black;
+  }
+  
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th {
+    height: 70px;
+  }
+  <!DOCTYPE html>
+<html>
+<head>
+<style>
+table, td, th {
+  border: 1px solid black;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  height: 70px;
+}
 </style>
-  </head>
-  <body>
+</head>
+<body>
+
+<h2>Menu</h2>
+
+
+<table>
+  <tr>
+
+    <th>Page</th>
+    <th>Page Number</th>
+  </tr>
+  <tr>
+   
+    <td>Our Team</td>
+    <td>Page 2</td>
+  </tr>
+  <tr>
+    <td>Divya Addala: Webmaster</td>
+    <td>Page 3</td>
+   
+  </tr>
+  <tr>
+    <td>Pradhi Waghray: Content Specialist</td>
+    <td>Page 4</td>
+   
+  </tr>
+  <tr>
+    <td>Nithya Rao: Front-end and Back-end developer</td>
+    <td>Page 5</td>
+    
+  </tr>
+  <tr>
+    <td>Srishreya: Tech Support and QA Specialist (6)</td>
+    <td>Page 6</td>
+    
+  </tr>
+  <tr>
+    <td>Apoorva: Site Architect</td>
+    <td>Page 7</td>
+   
+  </tr>
+</table>
+
+</body>
+</html>
+
+
+
   
-  <h2>Menu</h2>
-  
-  
-  <table>
-    <tr>
-  
-      <th>Page</th>
-      <th>Page Number</th>
-    </tr>
-    <tr>
-     
-      <td>Our Team</td>
-      <td>Page 2</td>
-    </tr>
-    <tr>
-      <td>Divya Addala: Webmaster</td>
-      <td>Page 3</td>
-     
-    </tr>
-    <tr>
-      <td>Pradhi Waghray: Content Specialist</td>
-      <td>Page 4</td>
-     
-    </tr>
-    <tr>
-      <td>Nithya Rao: Front-end and Back-end developer</td>
-      <td>Page 5</td>
-      
-    </tr>
-    <tr>
-      <td>Srishreya: Tech Support and QA Specialist (6)</td>
-      <td>Page 6</td>
-      
-    </tr>
-    <tr>
-      <td>Apoorva: Site Architect</td>
-      <td>Page 7</td>
-     
-    </tr>
-  </table>
-  
-  </body>
-  </html>
   
