--- a/team4style.css
+++ b/team4style.css
@@ -25,20 +25,9 @@ body {
 
 </body>
 </html>
-
-table, td, th {
-    border: 1px solid black;
-  }
+                                                                                             
+Team Members: Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray
   
-  table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  th {
-    height: 70px;
-  }
-  <!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -102,7 +91,3 @@ th {
 </body>
 </html>
 
-
-
-  
-  
